kubernetes/apps/myinvoice/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myinvoice
  namespace: myinvoice
spec:
  selector:
    app: myinvoice
  ports:
    - port: 80
      targetPort: 80
